--- a/app/src/main/res/layout/final_layout.xml
+++ b/app/src/main/res/layout/final_layout.xml
@@ -15,24 +15,19 @@
         android:layout_weight="1"
         android:gravity="center"
         android:padding="8dp"
-        android:text="MathDiscoveryQuiz3"
+        android:text="More references..."
         android:textColor="@android:color/holo_orange_dark"
         android:textSize="24sp" />
 
-    <RelativeLayout
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:onClick="start"
-            android:text="Play!" />
-
-    </RelativeLayout>
+        android:layout_weight="1"
+        android:gravity="center"
+        android:padding="8dp"
+        android:text="Hope you liked the game!!!"
+        android:textColor="@android:color/holo_orange_light"
+        android:textSize="24sp" />
 
     <Space
         android:layout_width="match_parent"
